package com.streaming.catalogo.interfaces;

public interface ColecaoMusical {

    IteradorMusica criarIterador();
}
