package com.streaming.reproducao.enums;

public enum StatusReproducao {
    PLAY,
    PAUSE,
    STOP
}
